# config-manager

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/dwgriffin_config/: __init__.py  manager.py
