[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwgriffin-config"
version = "0.1.0"
description = "Configuration Manager"
authors = [{name = "Dan Griffin"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]


[project.urls]
homepage = "https://github.com/dwgriffin/config-manager"
repository = "https://github.com/dwgriffin/config-manager"

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest",
    "Sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]
